src/objects/Email_Signature__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store email signatures, in chunks</description>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header1__c</fullName>
        <label>Header1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header2__c</fullName>
        <label>Header2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text4__c</fullName>
        <label>Text4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text5__c</fullName>
        <label>Text5</label>
        <type>TextArea</type>
    </fields>
    <label>Email Signature</label>
</CustomObject>